# LR35902-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cpu.h  memory.h
src/: cpu.c  main.c  memory.c
tests/: test_rom_generator.c
